New stuff's at the top.  This list is not necessarily complete.

3.09(pre)
 o Add "Save as" menu item to internal viewer (Gregg)
 o Eliminate deletion of ext path if it was not valid on startup
 allow saving of a currently not valid ext path with warning (Gregg)
 o Internal editor now handles readonly files (Gregg)
 o Correct hex edit buffer sizing to avoid data loss (Steven)
 o Use CopyPresParams to fix presparam inconsistencies in menus  (Gregg)
 o Correct variable cast to fix hex code display problem (Gregg)

3.08
 o Cancel in walk directories dialog now directly closes dialog even if
   directory path text has changed (Gregg)
 o Fixed seek and scan crash caused by file names that exceed maxpath(Gregg)
 o Fixed INVALID_NAME error caused by FILEFIND buffer crossing a 64k boundry (Steven)
 o Added 32 bit DosQuerySysState API (Gregg)
 o Warpin build will not attempt to use wrong wic.exe (John)
 o Make directory now always lists current directory (not subdirectories)
   on status line (Gregg)
 o Use thousands separator from default COUNTRYINFO (Gregg, Steven)
 o Add support for files over 4GiB (Gregg, Steven)
 o Rework filemask logic to match last extension and allow for better
   string matching (Gregg)
 o Use 4096 byte buffers to protect against NFTS driver small read defect (Steven)

3.07
 o Tweak build process (Steven)
 o Rework internals to increase file and directory limits (Steven, Gregg)
 o Rework internal sleep durations to increase performance (Gregg)
 o Rework file scanning buffer handling to increase performance (Gregg)
 o Speed up Config->Tree->Collapse before switching speed (Steven)
 o Speed up Dup find code. (Gregg)
 o Update configuration notebook scanning page (Steven)
 o Rework states logic to allow longer state names, tickets #109, #31 (Steven)
 o Report delta time in debug messages (Steven)
 o Added BldFullPathName cleaned up comp dirs code fix right left misalignment(Steven)