@@ -11,7 +11,7 @@
 #               dependant of the WPI target.
 
 !ifndef FM2_VER                  # if defined on wmake command, use it
-FM2_VER=-3-6-0                   # default value
+FM2_VER=-3-9-0                   # default value
 !ifdef %FM2_VER                  # if defined via env. var.
 FM2_VER=$(%FM2_VER)              #     use the env. var.
 !endif
